--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,69 @@
-opencv-python
-numpy
-mediapipe
-fastapi
-uvicorn
-pyaudio
-matplotlib
-jinja2
-aiofiles
-torch==2.0.1+cu118 -f https://download.pytorch.org/whl/torch_stable.html
-torchvision==0.15.2+cu118 -f https://download.pytorch.org/whl/torch_stable.html
-torchaudio==2.0.1+cu118 -f https://download.pytorch.org/whl/torch_stable.html
-ultralytics
-httpx
+absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.5.0
+attrs==24.2.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+cycler==0.12.1
+fastapi==0.115.0
+filelock==3.13.1
+flatbuffers==24.3.25
+fonttools==4.53.1
+fsspec==2024.2.0
+greenlet==3.1.0
+h11==0.14.0
+idna==3.10
+jax==0.4.33
+jaxlib==0.4.33
+Jinja2==3.1.3
+kiwisolver==1.4.7
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mediapipe==0.10.14
+ml_dtypes==0.5.0
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.3
+opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+packaging==24.1
+pandas==2.2.2
+pillow==10.2.0
+protobuf==4.25.5
+psutil==6.0.0
+psycopg2==2.9.9
+py-cpuinfo==9.0.0
+PyAudio==0.2.14
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+PyMySQL==1.1.1
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-multipart==0.0.9
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==70.0.0
+six==1.16.0
+sniffio==1.3.1
+sounddevice==0.5.0
+SQLAlchemy==2.0.35
+starlette==0.38.5
+sympy==1.12
+torch==2.4.1+cu118
+torchaudio==2.4.1+cu118
+torchvision==0.19.1+cu118
+tqdm==4.66.5
+typing_extensions==4.9.0
+tzdata==2024.1
+ultralytics==8.2.98
+ultralytics-thop==2.0.6
+urllib3==2.2.3
+uvicorn==0.30.6
